Add main content

--- a/tribute/index.html
+++ b/tribute/index.html
@@ -4,26 +4,49 @@
 <head>
     <meta charset="utf-8">
     <title>Elon Musk Tribute Page</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <div id="main">
-        <div id="title">Elon Musk</div>
-    </div>
-    <div id="img-div">
-        <img id="image" src="https://fsmedia.imgix.net/21/ac/9e/19/53cf/458a/8a5b/e3e638244049/elon-musk-speaks-at-the-ted-2017-conference-in-vancouver.png"
-            alt="a pic of elon musk">
-        <div id="img-caption">
-            A pic of Elon musk during his conversation with TED host Chris Anderson at a TED talk.
+        <h1 id="title">Elon Musk</h1>
+
+        <div id="img-div">
+            <img id="image" src="https://fsmedia.imgix.net/21/ac/9e/19/53cf/458a/8a5b/e3e638244049/elon-musk-speaks-at-the-ted-2017-conference-in-vancouver.png"
+                alt="a pic of elon musk">
+            <div id="img-caption">
+                A pic of Elon musk during his conversation with TED host Chris Anderson at a TED talk.
+            </div>
+        </div>
+        <div id="tribute-info">
+            <ul>
+                <h3 id="career-title">Career of Elon Musk:</h3>
+                <li><strong>Zip2</strong> - A company that provided and licensed online city guide software to
+                    newspapers</li>
+                <li><strong>X.com and paypal</strong> - An online bank founded by Elon Musk in November 1999 that later
+                    merged with Confinity and was renamed to PayPal</li>
+                <li><strong>SpaceX</strong> - A private American aerospace manufacturer and space transportation
+                    services company</li>
+                <li><strong>Tesla</strong> - An American automotive and energy company which specializes in electric
+                    car manufacturing</li>
+                <li><strong>SolarCity</strong> - A subsidiary of Tesla, Inc. that specializes in solar energy services;
+                    SolarCity markets, manufactures, and installs residential and commercial solar panels in the US
+                </li>
+                <li><strong>Hyperloop</strong> - A proposed mode of passenger and/or freight transportation, first used
+                    to describe an open-source vactrain design released by a joint team from Tesla and SpaceX</li>
+                <li><strong>OpenAI</strong> - A non-profit artificial intelligence (AI) research organization that aims
+                    to promote and develop friendly AI in such a way as to benefit humanity as a whole</li>
+                <li><strong>Neuralink</strong> - An American neurotechnology company founded by Elon Musk and eight
+                    others, reported to be developing implantable brain–computer interfaces (BCIs)</li>
+                <li><strong>The Boring Company</strong> - An infrastructure and tunnel construction company</li>
+                <li><strong>Teslaquila</strong> - Proposed Tesla-branded tequila</li>
+            </ul>
+            <h3>To know more about Elon Musk, checkout his <a id="tribute-link" href="https://en.wikipedia.org/wiki/Elon_Musk"
+                    target="_blank">wikipedia
+                    page</a>. </h3>
         </div>
     </div>
-    <div id="tribute-info">
-
-        <h3>To know more about Elon Musk, checkout his <a id="tribute-link" href="https://en.wikipedia.org/wiki/Elon_Musk"
-                target="_blank">wikipedia
-                page</a>. </h3>
-    </div>
-
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 
